fix mobile visual overlap

--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,8 @@ p {
 
 .flip-card {
   background-color: transparent;
-  width: 220px;
-  height: 220px;
+  width: 190px;
+  height: 190px;
   perspective: 1000px;
 }
 
@@ -100,8 +100,8 @@ p {
   color: black;
 }
 .flip-card-front img {
-  width: 220px;
-  height: 220px;
+  width: 190px;
+  height: 190px;
 }
 .hidden {
   display: none;
@@ -113,12 +113,32 @@ p {
   color: white;
 }
 .flip-card-back h2 {
-  padding: 0.4rem 0.2rem 0.1rem;
-  font-size: 1.1rem;
+  padding: 0.3rem 0.2rem 0.1rem;
+  font-size: 1rem;
 }
 .flip-card-back p {
-  padding: 0.2rem;
+  padding: 0 0.1rem;
 }
+
+@media screen and (min-width: 550px) {
+  .flip-card {
+    width: 220px;
+    height: 220px;
+    perspective: 1000px;
+  }
+  .flip-card-front img {
+    width: 220px;
+    height: 220px;
+  }
+  .flip-card-back h2 {
+    padding: 0.4rem 0.2rem 0.1rem;
+    font-size: 1.1rem;
+  }
+  .flip-card-back p {
+    padding: 0.2rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .flip-card-front,
   .flip-card-back {
@@ -235,12 +255,13 @@ p {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 0 5%;
+  margin: 6rem 5% 0;
   width: 40%;
-  height: 60%;
+  height: 200px;
 }
 .cards h1 {
   color: #476db5;
+  font-size: 1.6rem;
 }
 #catkind {
   color: #a2141e;
@@ -267,6 +288,17 @@ p {
   }
   .text {
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  .cards h1 {
+    font-size: 2.6rem;
+  }
+  .cards {
+    margin: 3rem 5% 0;
+    width: 40%;
+    height: 250px;
   }
 }
 
